@@ -1,4 +1,0 @@
-$NetBSD: distinfo,v 1.6 2002/03/10 20:21:57 jdolecek Exp $
-
-SHA1 (csacek-2.1.9.tar.bz2) = 1ddabf82b59ff28a156830c10dbd90775f8a27c2
-Size (csacek-2.1.9.tar.bz2) = 298890 bytes
