@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5936 2004/05/14 15:44:21 dillo Exp $
+$NetBSD: CHANGES,v 1.5937 2004/05/14 20:35:15 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2529,3 +2529,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated net-snmp to 5.1.1 [adam 2004-05-14]
 	Updated mathomatic to 11.1b [minskim 2004-05-14]
 	Added raw-0.1.0 [dillo 2004-05-14]
+	Removed ap-csacek [jdolecek 2004-14-05]
